tests/duarouter/function/skip_routing/invalid/gaps_ignore/options.duarouter
--net-file=input_net.net.xml --route-files=input_routes.rou.xml -o routes.rou.xml --skip-new-routes
--ignore-errors
